<resources>
    <string name="app_name">Burger</string>
    <string name="changelog_message">Notify other users when you drive.</string>

    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="fractivity_users_title">User List</string>
    <string name="fractivity_lunch_locations_title">Lunch Locations</string>
    <string name="fractivity_lunch_locations_today_title">Lunch Today</string>
    <string name="fractivity_add_lunch_location_title">Add Location</string>
    <string name="fractivity_edit_user_title">Edit User</string>
    <string name="fractivity_lunch_groups_title">Lunch Groups</string>
    <string name="fractivity_add_lunch_group_title">Select a Group</string>
    <string name="fractivity_sign_in_title">Welcome to Burger</string>
    <string name="fractivity_settings_title">Settings</string>
    <string name="fractivity_about_user_title">Profile</string>

    <string-array name="fractivity_day_label">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>

    </string-array>

    <string name="fractivity_sign_in_message">Sign up for Burger</string>
    <string name="fractivity_sign_in_with_google">Sign in</string>

    <string name="fractivity_lunch_groups_top_message">Burger will automatically match you with compatible partners in your Lunch Group</string>
    <string name="fractivity_lunch_groups_bottom_message">To change groups log out then back in</string>

    <string name="update_url">https://repkap11.com/burger/Burger.apk</string>
    <string name="update_app_task_signatures_dont_match">Signatures do not match, are you running a debug version of the app?</string>
    <string name="update_app_task_no_update_avaliable">Already up to date with Repkap11.com</string>
    <string name="update_app_task_you_are_newer">You have a newer version than the server. Lucky you.</string>
    <string name="update_app_task_error_updating_burger">Error Updating Burger</string>


    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notifications_enabled_title">Enable Notifications</string>
    <string name="pref_notifications_ringtone_default">content://settings/system/notification_sound</string>
    <string name="pref_notifications_ringtone_title">Sound</string>
    <string name="pref_notifications_ringtone_sub_text_none">Silent</string>
    <string name="pref_notifications_vibrate_title">Vibrate</string>
    <string name="pref_notifications_led_title">Blink LED</string>


    <string name="root_key_lunch_groups">lunch_groups</string>
    <string name="tell_them_im_driving">Tell them: I\'ll Drive</string>
    <plurals name="fractivity_lunch_locations_today_users_plural">
        <item quantity="one">%d person</item>
        <item quantity="other">%d people</item>
    </plurals>

    <plurals name="fractivity_users_seats_plural">
        <item quantity="one">%d seat</item>
        <item quantity="other">%d seats</item>
    </plurals>

    <string name="fractivity_lunch_day_of_week">Lunch on\u0020</string>
    <string name="weird_beer_friday">Weird Beer Friday</string>
    <string name="fractivity_about_user_no_car_size_set">Set car size with \"Edit\"</string>







    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="tell_them_im_driving_pending">Notification Pending</string>
</resources>
