<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="pref_notifications_enabled"
        android:title="@string/pref_notifications_enabled_title" />

    <RingtonePreference
        android:defaultValue="@string/pref_notifications_ringtone_default"
        android:dependency="pref_notifications_enabled"
        android:key="pref_notifications_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_notifications_ringtone_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="pref_notifications_enabled"
        android:key="pref_notifications_vibrate"
        android:title="@string/pref_notifications_vibrate_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="pref_notifications_enabled"
        android:key="pref_notifications_led"
        android:title="@string/pref_notifications_led_title" />

</PreferenceScreen>
